<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#E6F8F8F8"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:text="@string/editable_view"
                android:textColor="@color/purple_200"
                android:textSize="22sp" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/view_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:text="@string/view"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                   />

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>