<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/add"
                android:textColor="@color/purple_200"
                android:textSize="22sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_full_name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/item_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/item_description"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_mobile_num_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/item_price"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                

                <Button
                    android:id="@+id/layout_add_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>