<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp"
    android:background="@color/white"
    android:clipToPadding="false"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false"
    app:elevation="4dp">

    <LinearLayout
        android:id="@+id/remove_ordered_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#DD6060"
        android:visibility="invisible">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:rotation="45" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:background="#55B1AAAB"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cream_cake"
            android:layout_margin="10dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:transitionName="itemImageTransition" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:transitionName="itemNameTransition" />

            <TextView
                android:id="@+id/item_short_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/item_description"
                android:textSize="12sp"
                android:transitionName="itemDescTransition" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_price"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:elevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/item_price"
                    app:layout_constraintTop_toTopOf="parent">


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#55B1AAAB"
                    android:elevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    android:layout_margin="10dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#55B1AAAB"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:textAllCaps="false" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>